--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cross-env": "2.0.0",
     "del": "2.2.1",
     "env-merger": "1.0.0",
+    "envify": "^4.1.0",
     "gulp": "3.9.1",
     "gulp-clean-css": "2.0.11",
     "gulp-hb": "5.1.0",
