--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "inferno-component": "^3.0.6",
     "inferno-redux": "3.0.6",
     "redux": "^3.6.0",
+    "redux-localstorage": "^1.0.0-rc5",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1"
   },
