--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "inferno-redux": "3.0.6",
     "redux": "^3.6.0",
     "redux-localstorage": "^1.0.0-rc5",
+    "redux-localstorage-filter": "^0.1.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1"
   },
