--- a/package.json
+++ b/package.json
@@ -50,12 +50,15 @@
     "gulp-clean-css": "2.0.11",
     "gulp-hb": "5.1.0",
     "gulp-if": "2.0.1",
+    "gulp-inject": "^4.2.0",
     "gulp-plumber": "1.1.0",
     "gulp-postcss": "6.1.0",
     "gulp-prettify": "0.4.0",
     "gulp-rename": "1.2.2",
     "gulp-replace": "0.5.4",
     "gulp-sourcemaps": "1.6.0",
+    "gulp-svgmin": "^1.2.4",
+    "gulp-svgstore": "^6.1.0",
     "gulp-uglify": "1.5.4",
     "handlebars": "4.0.5",
     "handlebars-helpers": "0.7.3",
