--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
   },
   "parser": "babel-eslint",
   "plugins": [
-    "inferno"
+    "react"
   ],
   "rules": {
     ###############################################################################################
@@ -185,9 +185,9 @@
     "no-shadow": 2,                               # Disallow variable shadowing
     "no-undef": 2,                                # Disallow undeclared variables
     "no-unused-vars": 2,                          # Disallow unused variables
-    "inferno/jsx-uses-vars": 2,
-    "inferno/jsx-uses-inferno": 2,
-    "inferno/jsx-no-undef": 2,
+    "react/jsx-uses-vars": 2,
+    "react/jsx-uses-react": 2,
+    "react/jsx-no-undef": 2,
 
     ###############################################################################################
     # WHITESPACE <https://github.com/thenerdery/javascript-standards#whitespace>
