--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   },
   "dependencies": {
     "babel-polyfill": "6.9.1",
-    "inferno": "^3.0.6",
-    "inferno-component": "^3.0.6",
-    "inferno-motion": "^2.0.0",
-    "inferno-redux": "3.0.6",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-motion": "^0.5.2",
+    "react-redux": "^5.0.6",
     "redux": "^3.6.0",
     "redux-batched-actions": "^0.1.6",
     "redux-localstorage": "^1.0.0-rc5",
@@ -29,13 +29,13 @@
     "reselect": "^3.0.1"
   },
   "devDependencies": {
-    "babel-plugin-inferno": "^3.2.0",
     "babel-plugin-transform-async-to-generator": "6.8.0",
     "babel-plugin-transform-class-properties": "6.10.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "6.9.0",
     "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "^6.24.1",
     "babel-register": "6.14.0",
     "babelify": "7.3.0",
     "browser-sync": "2.13.0",
@@ -46,7 +46,7 @@
     "del": "2.2.1",
     "env-merger": "1.0.0",
     "envify": "^4.1.0",
-    "eslint-plugin-inferno": "^7.0.1",
+    "eslint-plugin-react": "^7.4.0",
     "gulp": "3.9.1",
     "gulp-clean-css": "2.0.11",
     "gulp-hb": "5.1.0",
@@ -89,10 +89,10 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "react"
     ],
     "plugins": [
-      "inferno",
       "transform-async-to-generator",
       "transform-class-properties",
       "transform-decorators-legacy",
