Adds google adsense tracking code.

--- a/env/default.env
+++ b/env/default.env
@@ -40,3 +40,5 @@ DIRECTORY_DEST = web
 # Allow deletions outside of current directory, necessary when DIRECTORY_DEST is ../
 # Fixes error "Cannot delete files/folders outside the current working directory."
 ENABLE_UNSAFE_CLEAN = false
+
+GOOGLE_AD_CLIENT = ca-pub-9095926495316975
