--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,9 +3,9 @@
   "name": "numbario math game",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "128x128",
-      "type": "image/x-icon"
+      "src": "favicon.png",
+      "sizes": "192x192",
+      "type": "image/png"
     }
   ],
   "start_url": "./index.html",
