Adds small favicon.ico, updates short_name.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "numbario",
-  "name": "numbario math game",
+  "name": "numbario",
   "icons": [
     {
       "src": "favicon.png",
