Adds analytics: page view and gave-up/won events.

--- a/env/default.env
+++ b/env/default.env
@@ -41,4 +41,4 @@ DIRECTORY_DEST = web
 # Fixes error "Cannot delete files/folders outside the current working directory."
 ENABLE_UNSAFE_CLEAN = false
 
-GOOGLE_AD_CLIENT = ca-pub-9095926495316975
+ANALYTICS_TRACKING_ID = UA-113566158-1
