--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-polyfill": "6.9.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-ga": "^2.4.1",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.6",
     "redux": "^3.6.0",
