--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,6 +6,11 @@
       "src": "favicon.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "favicon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": "./index.html",
